--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
 <h1>titulo esta aqui</h1>
 <p>a turma do 1B tem muitos <strong>vandalos</strong></p>
+Dividida entre o amor jonatas e arthur, eliza apesar das armações de Carolina, luta para se tornar modelo e vencer o concurso Garota totalmente demais!!!
+A novela totalmente demais foi produzida pela TV GLOBO e exibida de 9 de novembro de 2015 a 30 de maio de 2016, foi 175 capi´tulos de muita emoçao, cada episodio dessa novela vale ouro, incrivel demais, recomendo super...
+deixa me apresentar meu nome é luana, tenho 15 anos, sou estudante do cema, adoro minha escola, gosto de estar com meus amigos e familiares, adoro ver filmes e series é meu hobby
+
